--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -15,15 +15,15 @@
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
 		<div class="statTileCircleGreen"></div> Est Views</div>
-	<p>188,929</p>
-	<span>Week before: 182,000</span>
+	<p>{{ curWeek.views || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.views || 'N/A' }}</span>
 </div>
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
 		<div class="statTileCircleGreen"></div> Engagement Count</div>
-	<p>1234</p>
-	<span>Week before: 1,000</span>
+	<p>{{ curWeek.engagements || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.engagements || 'N/A' }}</span>
 </div>
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
@@ -35,15 +35,38 @@
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
 		<div class="statTileCircleGreen"></div> Spent</div>
-	<p>$1234</p>
-	<span>Week before: $1,000</span>
+	<p>${{ (curWeek.spent || 0).toFixed(2) }}</p>
+	<span>Week before: ${{ (lastWeek.spent || 0).toFixed(2) }}</span>
 </div>
-<div class="clearfix"></div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
-		<div class="statTileCircleGreen"></div> Perks Sent</div>
-	<p>0</p>
-	<span>Week before: 23</span>
+		<div class="statTileCircleGreen"></div> Likes</div>
+	<p>{{ curWeek.likes || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.likes || 'N/A' }}</span>
+</div>
+<div class="grid-23 mobile-grid-100 grid-parent statTile">
+	<div class="statTileHeader">
+		<div class="statTileCircleGreen"></div> Views</div>
+	<p>{{ curWeek.views || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.views || 'N/A' }}</span>
+</div>
+<div class="grid-23 mobile-grid-100 grid-parent statTile">
+	<div class="statTileHeader">
+		<div class="statTileCircleGreen"></div> Clicks</div>
+	<p>{{ curWeek.clicks || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.clicks || 'N/A' }}</span>
+</div>
+<div class="grid-23 mobile-grid-100 grid-parent statTile">
+	<div class="statTileHeader">
+		<div class="statTileCircleGreen"></div> Comments</div>
+	<p>{{ curWeek.comments || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.comments || 'N/A' }}</span>
+</div>
+<div class="grid-23 mobile-grid-100 grid-parent statTile">
+	<div class="statTileHeader">
+		<div class="statTileCircleGreen"></div> Shares</div>
+	<p>{{ curWeek.shares || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.shares || 'N/A' }}</span>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
