--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -68,8 +68,8 @@
 	<p>{{ curWeek.shares || 'N/A' }}</p>
 	<span>Week before: {{ lastWeek.shares || 'N/A' }}</span>
 </div>
-<div class="grid-23 mobile-grid-100 grid-parent statTile">
+<!--<div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
 		<div class="statTileCircleGreen"></div> Network Split</div>
 	<div id="chartdiv2"></div>
-</div>
+</div>-->
