spring clean up for eslint

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="Login(f.value)">
+<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="Login()">
 	<div class="top">
 		<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
 		<div class="grid-50 grid-parent align-right"><a [routerLink]="['/forgotPassword']" class="forgot">Forgot Password?</a></div>
