--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Advertisers</h2>
-<button class="btn btn-green1 btn-micro" (click)=cdlg.show(data)>Create +</button>
+<button class="btn btn-green1 btn-micro" (click)=cdlg.show()>Create +</button>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
