--- a/app/views/resetPassword.html
+++ b/app/views/resetPassword.html
@@ -1,4 +1,4 @@
-<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ResetPassword(f.value)">
+<form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ResetPassword()">
 	<input type="hidden" name="tok" [value]="form.token">
 	<div class="top">
 		<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
