--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -1,12 +1,17 @@
-<h2 class="heading">Download detailed reports:</h2>
+<!--<h2 class="heading">Download detailed reports:</h2>
 <br>
 <p>
 	Download a report from (from date) to (to date) for: (CampaignName dropdown)
 	<a class="btn btn-green1 ghost">Download</a>
 </p>
-<br>
+<br>-->
 <h2 class="heading">Engagements:</h2>
-<p align="center">Show: <a href="#">ALL</a> - <a href="#">Views</a> - <a href="#">Likes</a> - <a href="#">Comments</a> - <a href="#">Shares</a>	- <a href="#">Link Clicks</a> - <a href="#">@Mentions</a> - <a href="#">#Hashtag Boosts</a></p>
+<p align="center">
+	Show: <a (click)="setGraph('engagements')">Engagements</a> - <a (click)="setGraph('views')">Views</a> -
+	<a (click)="setGraph('likes')">Likes</a> - <a (click)="setGraph('comments')">Comments</a> -
+	<a (click)="setGraph('shares')">Shares</a>	- <a (click)="setGraph('clicks')">Clicks</a> -
+	<a (click)="setGraph('spent')">Spent</a> - <a (click)="setGraph('perks')">Perks Sent</a>
+</p>
 <div id="chartdiv"></div>
 
 <br/><br>
@@ -29,8 +34,8 @@
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
 		<div class="statTileCircleGreen"></div> Influencers Utilized</div>
-	<p>1234</p>
-	<span>Week before: 1,000</span>
+	<p>{{ curWeek.infs || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.infs || 'N/A' }}</span>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
@@ -43,12 +48,6 @@
 		<div class="statTileCircleGreen"></div> Likes</div>
 	<p>{{ curWeek.likes || 'N/A' }}</p>
 	<span>Week before: {{ lastWeek.likes || 'N/A' }}</span>
-</div>
-<div class="grid-23 mobile-grid-100 grid-parent statTile">
-	<div class="statTileHeader">
-		<div class="statTileCircleGreen"></div> Views</div>
-	<p>{{ curWeek.views || 'N/A' }}</p>
-	<span>Week before: {{ lastWeek.views || 'N/A' }}</span>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
@@ -67,6 +66,12 @@
 		<div class="statTileCircleGreen"></div> Shares</div>
 	<p>{{ curWeek.shares || 'N/A' }}</p>
 	<span>Week before: {{ lastWeek.shares || 'N/A' }}</span>
+</div>
+<div class="grid-23 mobile-grid-100 grid-parent statTile">
+	<div class="statTileHeader">
+		<div class="statTileCircleGreen"></div> Perks Sent</div>
+	<p>{{ curWeek.perks || 'N/A' }}</p>
+	<span>Week before: {{ lastWeek.perks || 'N/A' }}</span>
 </div>
 <!--<div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
