--- a/static/css/style.css
+++ b/static/css/style.css
@@ -266,7 +266,7 @@ input[type=checkbox]:checked + label:before {
 .checkbox label,
 .radio label{margin-bottom:10px;}
 
-.checkbox, .radio{padding-left:0px;}
+.checkbox, .radio{padding-left:0px; padding-top: 10px; }
 
 
 
@@ -1428,7 +1428,6 @@ padding-bottom:100px;
 .center-widget .form-group input[type="checkbox"]{
 	margin:0;
 	margin-bottom: 10px;
-	display: inline-block;
 }
 
 .center-widget .form-group label:last-child{margin-right:0;}
