--- a/app/views/form.html
+++ b/app/views/form.html
@@ -14,8 +14,8 @@
 							[value]="getValue(input)" (change)="updateValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
 						<div class="checkbox" *ngIf="fld.checkbox">
 							<input #input class="form-control" type="checkbox" name="{{fld.name}}"
-								[checked]="getValue(input)" (change)="updateValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
-							<label [attr.for]="fld.name">{{fld.placeholder || fld.title}}</label>
+								[checked]="getValue(input)" (focus)="setAttrs(input)" title="{{fld.placeholder || fld.title}}">
+							<label [attr.for]="fld.name" (click)="setCheckbox($event)">{{fld.placeholder || fld.title}}</label>
 						</div>
 						<span style="display: block" *ngIf="binders[fld.name].touched && binders[fld.name].error"><span class="error">*</span> {{binders[fld.name].error}}</span>
 
