--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -10,7 +10,7 @@
 <table class="tbl">
 	<thead>
 		<tr>
-			<th class="align-left">Agency</th>
+			<th class="align-left">Advertiser</th>
 			<th>ID</th>
 			<th>Subs</th>
 			<th>Email</th>
