--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -1,5 +1,5 @@
 <h2 class="heading">Manage Campaigns</h2>
-<button class="btn btn-green1 btn-micro" (click)=cdlg.show(data)>Create +</button>
+<a class="btn btn-green1 btn-micro" [routerLink]="['/createCampaign', user.id]">Create +</a>
 
 <form style="width:250px; float:right;">
 	<input class="form-control input-sm" type="text" placeholder="Search this table..." [(ngModel)]="kw" name="kw">
@@ -31,11 +31,8 @@
 			<td>{{cmp.instagram && 'X'}}</td>
 			<td>{{cmp.youtube && 'X'}}</td>
 			<td>{{cmp.createdAt * 1000 | date}}</td>
-			<td><button class="btn-info btn-micro ghost" (click)=edlg.show(cmp)>Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
+			<td><button class="btn-info btn-micro ghost" [routerLink]="['/editCampaign', cmp.advertiserId, cmp.id]">Edit</button> | <button class="btn-scarlet btn-micro ghost">X</button></td>
 		</tr>
 	</tbody>
 </table>
 
-
-<smart-form #cdlg class="dialog" [fields]=fields (onSave)="save($event.data, $event.done)" title="Create Campaign"></smart-form>
-<smart-form #edlg class="dialog" [fields]=editFields (onSave)="edit($event.data, $event.done)" title="Edit Campaign"></smart-form>
