go to create campaign if the advertiser doesn't have any

--- a/app/views/mAdvertisers.html
+++ b/app/views/mAdvertisers.html
@@ -20,7 +20,7 @@
 	</thead>
 	<tbody>
 		<tr *ngFor="let adv of list | filter:FilterUsers">
-			<td class="align-left"><a [routerLink]="['/reporting', adv.id]">{{adv.name}}</a></td>
+			<td class="align-left"><a (click)="openAdv(adv)">{{adv.name}}</a></td>
 			<td>{{adv.id}}</td>
 			<td>{{adv.numCmps}}</td>
 			<td>{{adv.email}}</td>
