CSS is the devil

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -1,4 +1,4 @@
-<div class="grid-62 mobile-grid-100 grid-parent content-holder">
+<div class="grid-62 mobile-grid-100 grid-parent" three-column>
 	<div class="content-holder center-widget">
 		<form #f="ngForm" novalidate (ngSubmit)="save()">
 			<div class="grid-100 grid-parent">
